syntax = "proto3";

package active_code;

import "active_code_messsage.proto";
import "google/protobuf/empty.proto";

// 发送
message SendActiveCodeRequest {
    string email = 1;
    ActiveCodeKind kind = 2;
}

// 验证
message VerifyActiveCodeReply {
    bool success = 1;
}
service ActiveCodeService {
    rpc Send(SendActiveCodeRequest) returns (google.protobuf.Empty);
    rpc Verify(ActiveCode) returns (VerifyActiveCodeReply);
}